replace _pawvzww -> hidden block-xl

--- a/help.html
+++ b/help.html
@@ -2166,7 +2166,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_pawvzww">
+                                          <div class="hidden block-xl">
                                             <div class="_w557dg">
                                               <div class="_17pfaj7">
                                                 <div class="h-full">
