--- a/payment.html
+++ b/payment.html
@@ -554,7 +554,7 @@
                                                         <div
                                                           data-testid="payment-option-dropdown-selector"
                                                         >
-                                                          <div class="_pawvzww">
+                                                          <div class="hidden block-xl">
                                                             <div
                                                               class="_vysn8h0"
                                                             >
