--- a/resources.html
+++ b/resources.html
@@ -2540,7 +2540,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_pawvzww">
+                                    <div class="hidden block-xl">
                                       <div class="explore__time-btn-wrapper">
                                         <div class="vh-100">
                                           <div class="relative">
