--- a/merchandising.html
+++ b/merchandising.html
@@ -5342,7 +5342,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <div
                                                         class="_mmvgcv"
@@ -6048,7 +6048,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <div
                                                         class="_mmvgcv"
@@ -6322,7 +6322,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_pawvzww">
+                                                <div class="hidden block-xl">
                                                   <div class="explore__time-btn-wrapper">
                                                     <div
                                                       class="flex-column"
@@ -6549,7 +6549,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <a
                                                         href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -7062,7 +7062,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <a
                                                         href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -7573,7 +7573,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <a
                                                         href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -8084,7 +8084,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <a
                                                         href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -8474,7 +8474,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_pawvzww">
+                                                <div class="hidden block-xl">
                                                   <div class="explore__time-btn-wrapper">
                                                     <div
                                                       class="flex-column"
@@ -8720,7 +8720,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_pawvzww">
+                                                    <div class="hidden block-xl">
                                                       <div class="explore__time-btn-wrapper">
                                                         <a
                                                           href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -9246,7 +9246,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_pawvzww">
+                                                    <div class="hidden block-xl">
                                                       <div class="explore__time-btn-wrapper">
                                                         <a
                                                           href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -9770,7 +9770,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_pawvzww">
+                                                    <div class="hidden block-xl">
                                                       <div class="explore__time-btn-wrapper">
                                                         <a
                                                           href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -10294,7 +10294,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="_pawvzww">
+                                                    <div class="hidden block-xl">
                                                       <div class="explore__time-btn-wrapper">
                                                         <a
                                                           href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -10706,7 +10706,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_pawvzww">
+                                              <div class="hidden block-xl">
                                                 <div class="explore__time-btn-wrapper">
                                                   <div
                                                     class="flex-column"
@@ -10953,7 +10953,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <div
                                                         class="_mmvgcv"
@@ -11345,7 +11345,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <div
                                                         class="_mmvgcv"
@@ -11792,7 +11792,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <div
                                                         class="_mmvgcv"
@@ -12383,7 +12383,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_pawvzww">
+                                                  <div class="hidden block-xl">
                                                     <div class="explore__time-btn-wrapper">
                                                       <div
                                                         class="_mmvgcv"
