--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -219,7 +219,7 @@
                               <div
                                 data-testid="payment-option-dropdown-selector"
                               >
-                                <div class="_pawvzww">
+                                <div class="hidden block-xl">
                                   <div class="_vysn8h0">
                                     <div class="_uh6ul55">
                                       <h2
