replace _wth1u7 -> hidden

--- a/transaction_history.html
+++ b/transaction_history.html
@@ -95,7 +95,7 @@
                                           class="_14p3wn7w"
                                           aria-label="Airbnb Hosting homepage"
                                           href="/hosting"
-                                          ><div class="_wth1u7">
+                                          ><div class="hidden">
                                             <svg
                                               width="102"
                                               height="32"
