replace page-shell__visibility -> hidden block-md

--- a/notifications.html
+++ b/notifications.html
@@ -46,7 +46,7 @@
               >
                 <div style="--page-shell-max-content-width: none">
                   <div class="page-shell">
-                    <div class="page-shell__visibility"></div>
+                    <div class="hidden block-md"></div>
                     <main id="site-content">
                       <nav
                         class="_1tt196k"
