--- a/payment.html
+++ b/payment.html
@@ -48,7 +48,7 @@
               >
                 <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
-                    <div class="page-shell__visibility">
+                    <div class="hidden block-md">
                       <div class="display__flex dir dir-ltr">
                         <div class="tab__content-visibility">
                           <div class="_18nz6sk" role="banner">
