--- a/wishlist.html
+++ b/wishlist.html
@@ -46,7 +46,7 @@
               >
                 <div style="--page-shell-max-content-width: none">
                   <div class="page-shell">
-                    <div class="page-shell__visibility">
+                    <div class="hidden block-md">
                       <div class="display__flex dir dir-ltr" style="">
                         <header class="header">
                           <div class="_uck3tvq">
