--- a/wishlists.html
+++ b/wishlists.html
@@ -1443,7 +1443,7 @@
                             >Footer section</span
                           >
                           <section>
-                            <div class="page-shell-mobile__display-none">
+                            <div class="_1udzt2s">
                               <div class="page-shell-mobile__mb-16">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
