replace hidden__md -> hidden block-md

--- a/resources.html
+++ b/resources.html
@@ -1086,7 +1086,7 @@
                                     </ul>
                                   </div>
                                   <div class="gallery-xl">
-                                    <div class="hidden__md">
+                                    <div class="hidden block-md">
                                       <div class="_1hytef3">
                                         <div class="vh-100">
                                           <div class="relative">
