--- a/reviews.html
+++ b/reviews.html
@@ -72,7 +72,7 @@
                       <div class="_1as7kh5l" data-testid="after">
                         <div class="main_content__details-cancel-button-wrapper">
                           <div class="_14f4nnk hidden d-md-inline-block">
-                            <div class="hidden__md">
+                            <div class="hidden block-md">
                               <span class="_10rf6ea"
                                 >Last saved a few seconds ago</span
                               >
@@ -401,7 +401,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="hidden__md hidden block-md">
+                                  <div class="hidden block-md">
                                     <div
                                       id="expectations_option_very_high"
                                       aria-disabled="false"
@@ -480,7 +480,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="hidden__md hidden block-md">
+                                  <div class="hidden block-md">
                                     <div
                                       id="expectations_option_high"
                                       aria-disabled="false"
@@ -559,7 +559,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="hidden__md hidden block-md">
+                                  <div class="hidden block-md">
                                     <div
                                       id="expectations_option_neutral"
                                       aria-disabled="false"
@@ -638,7 +638,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="hidden__md hidden block-md">
+                                  <div class="hidden block-md">
                                     <div
                                       id="expectations_option_low"
                                       aria-disabled="false"
@@ -717,7 +717,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="hidden__md hidden block-md">
+                                  <div class="hidden block-md">
                                     <div
                                       id="expectations_option_very_low"
                                       aria-disabled="false"
