--- a/wishlists.html
+++ b/wishlists.html
@@ -734,7 +734,7 @@
                             </div>
                           </div>
                           <section>
-                            <div class="hidden__md">
+                            <div class="hidden block-md">
                               <div>
                                 <ul class="_f68cfc">
                                   <li class="_gcfn5x">
