--- a/help.html
+++ b/help.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="ma262ps dir dir-ltr">
                       <div class="l1iptyfs dir dir-ltr">
-                        <div class="hidden__md">
+                        <div class="hidden block-md">
                           <div class="c1yxonyl dir dir-ltr">
                             <button
                               aria-label="Choose a language and currency"
@@ -118,7 +118,7 @@
                         </div>
                       </div>
                       <div class="p130z5ks dir dir-ltr">
-                        <div class="hidden__md">
+                        <div class="hidden block-md">
                           <nav>
                             <div class="msc963k dir dir-ltr">
                               <button
@@ -226,7 +226,7 @@
                                 Search help
                               </button>
                             </div>
-                            <div class="hidden__md">
+                            <div class="hidden block-md">
                               <div>
                                 <div
                                   class="a1vub294 dir dir-ltr"
@@ -724,7 +724,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="hidden__md">
+                                        <div class="hidden block-md">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <div class="t12nyme4 dir dir-ltr">
@@ -1872,7 +1872,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="hidden__md">
+                                          <div class="hidden block-md">
                                             <div class="header__logo">
                                               <div class="_w557dg">
                                                 <div class="_17pfaj7">
@@ -2806,7 +2806,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="hidden__md">
+                                        <div class="hidden block-md">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <div class="t12nyme4 dir dir-ltr">
@@ -3860,7 +3860,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="hidden__md">
+                                        <div class="hidden block-md">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <div class="t12nyme4 dir dir-ltr">
@@ -4916,7 +4916,7 @@
                                             ></a>
                                           </div>
                                         </div>
-                                        <div class="hidden__md">
+                                        <div class="hidden block-md">
                                           <div class="gtn3g2w dir dir-ltr">
                                             <div class="t1fc0s08 dir dir-ltr">
                                               <div class="t12nyme4 dir dir-ltr">
