--- a/merchandising.html
+++ b/merchandising.html
@@ -5119,7 +5119,7 @@
                                                   "
                                                 >
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -5945,7 +5945,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -6294,7 +6294,7 @@
                                             <div class="_1jnlcv5q">
                                               <span
                                                 ><div class="hidden block-sm"></div>
-                                                <div class="hidden__md">
+                                                <div class="hidden block-md">
                                                   <div class="header__logo">
                                                     <div
                                                       class="flex-column"
@@ -6378,7 +6378,7 @@
                                               <div class="_a0tp2q">
                                                 <div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -6892,7 +6892,7 @@
                                                 </div>
                                                 <div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -7403,7 +7403,7 @@
                                                 </div>
                                                 <div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -7914,7 +7914,7 @@
                                                 </div>
                                                 <div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -8446,7 +8446,7 @@
                                             <div class="_1jnlcv5q">
                                               <span
                                                 ><div class="hidden block-sm"></div>
-                                                <div class="hidden__md">
+                                                <div class="hidden block-md">
                                                   <div class="header__logo">
                                                     <div
                                                       class="flex-column"
@@ -8549,7 +8549,7 @@
                                                     <div
                                                       class="hidden block-sm"
                                                     ></div>
-                                                    <div class="hidden__md">
+                                                    <div class="hidden block-md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -9076,7 +9076,7 @@
                                                     <div
                                                       class="hidden block-sm"
                                                     ></div>
-                                                    <div class="hidden__md">
+                                                    <div class="hidden block-md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -9600,7 +9600,7 @@
                                                     <div
                                                       class="hidden block-sm"
                                                     ></div>
-                                                    <div class="hidden__md">
+                                                    <div class="hidden block-md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -10124,7 +10124,7 @@
                                                     <div
                                                       class="hidden block-sm"
                                                     ></div>
-                                                    <div class="hidden__md">
+                                                    <div class="hidden block-md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -10681,7 +10681,7 @@
                                           <div class="_1jnlcv5q">
                                             <span
                                               ><div class="hidden block-sm"></div>
-                                              <div class="hidden__md">
+                                              <div class="hidden block-md">
                                                 <div class="header__logo">
                                                   <div
                                                     class="flex-column"
@@ -10848,7 +10848,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -11239,7 +11239,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -11604,7 +11604,7 @@
                                               <div>
                                                 <div class="_17t88vi">
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -12277,7 +12277,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="hidden block-sm"></div>
-                                                  <div class="hidden__md">
+                                                  <div class="hidden block-md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
