replace page-shell-mobile__footer-spacer -> hidden block-md hidden-xl

--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -1069,7 +1069,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="page-shell-mobile__footer-spacer">
+                            <div class="hidden block-md hidden-xl">
                               <div class="page-shell-mobile__footer-spacer-wrapper">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
