--- a/profile.html
+++ b/profile.html
@@ -2904,7 +2904,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                 </div>
                               </div>
                             </div>
-                            <div class="page-shell-mobile__footer-spacer">
+                            <div class="hidden block-md hidden-xl">
                               <div class="page-shell-mobile__footer-spacer-wrapper">
                                 <div class="flex">
                                   <span class="page-shell-mobile__lang-wrapper"
