--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
     ></div>
     <div id="education-overlay-root"></div>
     <style data-aphrodite="true">
-      ._145b7he {
+      .main_content {
         position: relative !important;
         min-height: -webkit-calc(100vh - 560px) !important;
         min-height: -moz-calc(100vh - 560px) !important;
@@ -2457,7 +2457,7 @@
                 </div>
               </header>
             </div>
-            <main id="site-content" class="_145b7he">
+            <main id="site-content" class="main_content">
               <div class="_14zmyw6">
                 <div class="_10qs2gf">
                   <div class="_1p4o530w">
@@ -2533,12 +2533,12 @@
                               >
                               <div>
                                 <div class="box-border">
-                                  <div class="_d1ib85">
+                                  <div class="main_content__header-action-btn">
                                     <div>
                                       <div>
                                         <div>
                                           <button
-                                            class="_1szhrc0"
+                                            class="main_content__header-action-dot"
                                             aria-expanded="false"
                                             aria-haspopup="true"
                                             type="button"
@@ -2564,12 +2564,12 @@
                                           </button>
                                         </div>
                                         <div
-                                          class="_1437yx3"
+                                          class="main_content__header-action--btn-icon-wrapper"
                                           style="transform: translate(0px, 0px)"
                                         >
-                                          <div class="_fe45ary">
+                                          <div class="main_content__header-action--btn-icon-container">
                                             <ul
-                                              class="_17z3v3kl"
+                                              class="main_content__header-action-menu"
                                               tabindex="-1"
                                               role="menu"
                                               aria-hidden="true"
@@ -2581,7 +2581,7 @@
                                               <li role="none">
                                                 <button
                                                   type="button"
-                                                  class="_ejgbk3"
+                                                  class="main_content__header-action-btn-dialog-list-btn"
                                                   role="menuitem"
                                                   aria-busy="false"
                                                 >
@@ -2625,12 +2625,12 @@
                               >
                               <div>
                                 <div class="box-border">
-                                  <div class="_d1ib85">
+                                  <div class="main_content__header-action-btn">
                                     <div>
                                       <div>
                                         <div>
                                           <button
-                                            class="_1szhrc0"
+                                            class="main_content__header-action-dot"
                                             aria-expanded="false"
                                             aria-haspopup="true"
                                             type="button"
@@ -2656,12 +2656,12 @@
                                           </button>
                                         </div>
                                         <div
-                                          class="_1437yx3"
+                                          class="main_content__header-action--btn-icon-wrapper"
                                           style="transform: translate(0px, 0px)"
                                         >
-                                          <div class="_fe45ary">
+                                          <div class="main_content__header-action--btn-icon-container">
                                             <ul
-                                              class="_17z3v3kl"
+                                              class="main_content__header-action-menu"
                                               tabindex="-1"
                                               role="menu"
                                               aria-hidden="true"
@@ -2673,7 +2673,7 @@
                                               <li role="none">
                                                 <button
                                                   type="button"
-                                                  class="_ejgbk3"
+                                                  class="main_content__header-action-btn-dialog-list-btn"
                                                   role="menuitem"
                                                   aria-busy="false"
                                                 >
@@ -2715,12 +2715,12 @@
                               >
                               <div>
                                 <div class="box-border">
-                                  <div class="_d1ib85">
+                                  <div class="main_content__header-action-btn">
                                     <div>
                                       <div>
                                         <div>
                                           <button
-                                            class="_1szhrc0"
+                                            class="main_content__header-action-dot"
                                             aria-expanded="false"
                                             aria-haspopup="true"
                                             type="button"
@@ -2746,12 +2746,12 @@
                                           </button>
                                         </div>
                                         <div
-                                          class="_1437yx3"
+                                          class="main_content__header-action--btn-icon-wrapper"
                                           style="transform: translate(0px, 0px)"
                                         >
-                                          <div class="_fe45ary">
+                                          <div class="main_content__header-action--btn-icon-container">
                                             <ul
-                                              class="_17z3v3kl"
+                                              class="main_content__header-action-menu"
                                               tabindex="-1"
                                               role="menu"
                                               aria-hidden="true"
@@ -2763,7 +2763,7 @@
                                               <li role="none">
                                                 <button
                                                   type="button"
-                                                  class="_ejgbk3"
+                                                  class="main_content__header-action-btn-dialog-list-btn"
                                                   role="menuitem"
                                                   aria-busy="false"
                                                 >
@@ -2777,7 +2777,7 @@
                                               <li role="none">
                                                 <button
                                                   type="button"
-                                                  class="_ejgbk3"
+                                                  class="main_content__header-action-btn-dialog-list-btn"
                                                   role="menuitem"
                                                   aria-busy="false"
                                                 >
