--- a/insights.html
+++ b/insights.html
@@ -169,7 +169,7 @@
                 </div>
               </header>
             </div>
-            <main id="site-content" class="_145b7he">
+            <main id="site-content" class="main_content">
               <div class="_1unac3l">
                 <div class="tab__content-visibility">
                   <main id="site-content">
