--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -381,7 +381,7 @@
                                                           <span class="_4gelgl"
                                                             >MasterCard ••••
                                                             3765</span
-                                                          ><span class="_uhxsfg"
+                                                          ><span class="main_content__header-current_date_btn_wrapper"
                                                             ><span
                                                               class="atm_26_1j28jx2 atm_73_usvi9m atm_9s_116y0ak atm_e2_gktfv atm_vy_1ns9ob4 atm_h_1h6ojuz atm_fc_1h6ojuz atm_vv_1q9ccgz atm_5j_mlmjl2 atm_l8_6breem atm_7l_18pqv07 atm_c8_1l6y6xl atm_g3_i7n6xh atm_cs_u3ocpi atm_t9_angws6 atm_2d_k7cbwk dir dir-ltr"
                                                               ><span
@@ -399,7 +399,7 @@
                                                       </div>
                                                       <div class="_142uhf7">
                                                         <div class="_mlj9hsz">
-                                                          <div class="_d1ib85">
+                                                          <div class="main_content__header-action-btn">
                                                             <div>
                                                               <div>
                                                                 <div>
@@ -433,7 +433,7 @@
                                                                   </button>
                                                                 </div>
                                                                 <div
-                                                                  class="_1437yx3"
+                                                                  class="main_content__header-action--btn-icon-wrapper"
                                                                   style="
                                                                     transform: translate(
                                                                       0px,
@@ -442,7 +442,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_fe45ary"
+                                                                    class="main_content__header-action--btn-icon-container"
                                                                   >
                                                                     <ul
                                                                       class="_6p8oueb"
@@ -1129,7 +1129,7 @@
                                                           <span class="_4gelgl"
                                                             >MasterCard ••••
                                                             3765</span
-                                                          ><span class="_uhxsfg"
+                                                          ><span class="main_content__header-current_date_btn_wrapper"
                                                             ><span
                                                               class="atm_26_1j28jx2 atm_73_usvi9m atm_9s_116y0ak atm_e2_gktfv atm_vy_1ns9ob4 atm_h_1h6ojuz atm_fc_1h6ojuz atm_vv_1q9ccgz atm_5j_mlmjl2 atm_l8_6breem atm_7l_18pqv07 atm_c8_1l6y6xl atm_g3_i7n6xh atm_cs_u3ocpi atm_t9_angws6 atm_2d_k7cbwk dir dir-ltr"
                                                               ><span
@@ -1147,7 +1147,7 @@
                                                       </div>
                                                       <div class="_142uhf7">
                                                         <div class="_mlj9hsz">
-                                                          <div class="_d1ib85">
+                                                          <div class="main_content__header-action-btn">
                                                             <div>
                                                               <div>
                                                                 <div>
@@ -1181,7 +1181,7 @@
                                                                   </button>
                                                                 </div>
                                                                 <div
-                                                                  class="_1437yx3"
+                                                                  class="main_content__header-action--btn-icon-wrapper"
                                                                   style="
                                                                     transform: translate(
                                                                       0px,
@@ -1190,7 +1190,7 @@
                                                                   "
                                                                 >
                                                                   <div
-                                                                    class="_fe45ary"
+                                                                    class="main_content__header-action--btn-icon-container"
                                                                   >
                                                                     <ul
                                                                       class="_6p8oueb"
