--- a/personal-info.html
+++ b/personal-info.html
@@ -1092,7 +1092,7 @@
                                       </div>
                                     </div>
                                     <form>
-                                      <div class="_kw9uzc">
+                                      <div class="main_content__sidebar-legend-list">
                                         <div>
                                           <div>
                                             <div class="_1byskwn">
@@ -4517,7 +4517,7 @@
                                           </div>
                                         </div>
                                         <form>
-                                          <div class="_kw9uzc">
+                                          <div class="main_content__sidebar-legend-list">
                                             <div>
                                               <div>
                                                 <div class="_1byskwn">
