--- a/products.html
+++ b/products.html
@@ -9025,7 +9025,7 @@
                                                               fill-rule="evenodd"
                                                             ></path>
                                                           </svg>
-                                                          <div class="_uhxsfg">
+                                                          <div class="main_content__header-current_date_btn_wrapper">
                                                             Show all photos
                                                           </div>
                                                         </div>
