--- a/reviews.html
+++ b/reviews.html
@@ -1365,7 +1365,7 @@
                                   <button type="submit" class="btn-dark">
                                     <span class="search__submit-btn-text-center"
                                       ><span class="box-border">Next</span
-                                      ><span class="_9y3psr"
+                                      ><span class="main_content__header-action--icon-wrapper"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
