--- a/experiences.html
+++ b/experiences.html
@@ -35,7 +35,7 @@
     ></div>
     <div id="education-overlay-root"></div>
     <style data-aphrodite="true">
-      ._145b7he {
+      .main_content {
         position: relative !important;
         min-height: -webkit-calc(100vh - 560px) !important;
         min-height: -moz-calc(100vh - 560px) !important;
@@ -4110,7 +4110,7 @@
                 </div>
               </header>
             </div>
-            <main id="site-content" class="_145b7he">
+            <main id="site-content" class="main_content">
               <div class="_1unac3l">
                 <div style="margin-top: 16px; margin-bottom: 64px">
                   <main id="site-content">
