--- a/help.html
+++ b/help.html
@@ -1446,7 +1446,7 @@
                                             </div>
                                           </h2>
                                         </div>
-                                        <div class="_kw9uzc">
+                                        <div class="main_content__sidebar-legend-list">
                                           <div class="page-shell-mobile__display-none">
                                             <div>
                                               <span class="new-arrow-underscore"
